# vsi-pjrt-plugin

./: .bazelrc  .clang-tidy  .gitignore  BUILD  LICENSE  README.md  WORKSPACE  pyproject.toml  setup.py
examples/: demo_inference.py  imagenet_inference.py
patches/tim_vx/: relax_compiler_warning_as_error.patch
torch_xla_vsi_plugin/: __init__.py
xla/: BUILD
xla/pjrt/: BUILD  se_vsi_pjrt_client.cc  se_vsi_pjrt_client.h
xla/pjrt/c/: BUILD  pjrt_c_api_vsi.cc  pjrt_c_api_vsi.h  pjrt_c_api_vsi_internal.cc  pjrt_c_api_vsi_internal.h  pjrt_c_api_vsi_test.cc
xla/stream_executor/vsi/: BUILD  vsi_compiler.cc  vsi_compiler.h  vsi_executable.cc  vsi_executable.h  vsi_executor.cc  vsi_executor.h  vsi_graph_builder.cc  vsi_graph_builder.h  vsi_platform.cc  vsi_platform.h  vsi_platform_id.cc  vsi_platform_id.h  vsi_transfer_manager.cc  vsi_transfer_manager.h  vsi_utils.h
